Closed
Bug 153052
Opened 23 years ago
Closed 22 years ago
[news] Forward inline button does not work for news accounts with capital letters in the hostname
Categories
(MailNews Core :: Composition, defect)
MailNews Core
Composition
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.4final
People
(Reporter: 3.14, Assigned: sspitzer)
References
Details
(Keywords: regression)
Attachments
(1 file, 2 obsolete files)
|
3.45 KB,
patch
|
sspitzer
:
review+
Bienvenu
:
superreview+
asa
:
approval1.4+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.1a) Gecko/20020619
Forward inline does not work for news articles, it does work for e-mail. Same
effekt for using the menu or the button (I have set it to use inline). There is
simply no composer window created.
All bugs I could find deal with forward as attachment or are resolved.
The JavaScript console says (forward button):
Error: uncaught exception: [Exception... "Component returned failure code:
0x8000ffff (NS_ERROR_UNEXPECTED) [nsIMsgComposeService.OpenComposeWindow]"
nsresult: "0x8000ffff (NS_ERROR_UNEXPECTED)" location: "JS frame ::
chrome://messenger/content/mailCommands.js :: ComposeMessage :: line 192" data: no]
And for the menu:
Error: [Exception... "Component returned failure code: 0x8000ffff
(NS_ERROR_UNEXPECTED) [nsIMsgComposeService.OpenComposeWindow]" nsresult:
"0x8000ffff (NS_ERROR_UNEXPECTED)" location: "JS frame ::
chrome://messenger/content/mailCommands.js :: ComposeMessage :: line 192" data: no]
Source File: chrome://messenger/content/mailCommands.js
Line: 192
pi
Comment 1•23 years ago
|
||
WFM using trunk build 2002062008 and Windows XP.
A linux version only bug ?
Comment 2•23 years ago
|
||
Using today trunk build on Linux, I am not able to reproduce this problem!
Reporter, maybe the problem is related to post you are trying to forward.
| Reporter | ||
Comment 3•23 years ago
|
||
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.1a+) Gecko/20020625
Happening to all postings with the same JS error.
pi
Comment 4•23 years ago
|
||
Can you try with a new build, I wonder if it was related to bug 155671 or bug
155638 which get fixed last week.
| Reporter | ||
Comment 5•23 years ago
|
||
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.1b) Gecko/2002072818
WFM.
pi
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → WORKSFORME
| Reporter | ||
Comment 6•23 years ago
|
||
Bug is back in 1.3b release. JS-Console:
Error: uncaught exception: [Exception... "Component returned failure code:
0x8000ffff (NS_ERROR_UNEXPECTED) [nsIMsgComposeService.OpenComposeWindow]"
nsresult: "0x8000ffff (NS_ERROR_UNEXPECTED)" location: "JS frame ::
chrome://messenger/content/mailCommands.js :: ComposeMessage :: line 189" data: no]
pi
| Reporter | ||
Comment 7•23 years ago
|
||
Asking for blocking1.3. It is a no-no to have a button which does not work.
Majoring for the same reason.
A report in de.comm.software.mozilla mentions this problem for
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030216
pi
Severity: normal → major
Flags: blocking1.3?
Comment 8•23 years ago
|
||
I have that too with
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.3b) Gecko/20030214(08)
I think bug should be set "all OS" ?
I agree with #7
| Reporter | ||
Updated•23 years ago
|
OS: Linux → All
Hardware: PC → All
| Assignee | ||
Comment 9•23 years ago
|
||
on it. die bug die!
Assignee: ducarroz → sspitzer
Status: REOPENED → NEW
Target Milestone: --- → mozilla1.3final
| Assignee | ||
Comment 10•23 years ago
|
||
hmm, this is working for me on win32.
| Assignee | ||
Comment 11•23 years ago
|
||
does anyone who can reproduce this have a debug build?
what happens if you create a new profile and try it? (maybe this is an account
manager bug manifesting itsself in the compose window)
Status: NEW → ASSIGNED
Comment 12•23 years ago
|
||
I also cannot reproduce this. I've tested windows and linux and niether are
broken for me.
| Reporter | ||
Comment 13•22 years ago
|
||
New profile seems to work (1.3b release Linux). So what can be done to get rid
of the problem? Why does Mozilla not find it itself? Could Mozilla fix it itself
then?
pi
Updated•22 years ago
|
Flags: blocking1.3? → blocking1.3-
| Reporter | ||
Comment 14•22 years ago
|
||
I deleted all kinds of files in my profile, no success:
XUL.mfasl
chrome/chrome.rdf
localstore.rdf
panacea.dat
mailViews.dat
Anything else I could try to catch it?
pi
| Reporter | ||
Comment 15•22 years ago
|
||
*** Bug 194177 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 16•22 years ago
|
||
Comment 0 looks very similar to bug 110502. Maybe that is somehow related.
pi
Summary: Forward inline does not work for news (works for e-mail) → Forward inline button does not work for news (works for e-mail)
| Reporter | ||
Comment 17•22 years ago
|
||
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4a) Gecko/20030331
Now also the comman from pulldown fails:
Error: [Exception... "Component returned failure code: 0x8000ffff
(NS_ERROR_UNEXPECTED) [nsIMsgComposeService.OpenComposeWindow]" nsresult:
"0x8000ffff (NS_ERROR_UNEXPECTED)" location: "JS frame ::
chrome://messenger/content/mailCommands.js :: ComposeMessage :: line 189" data: no]
Source File: chrome://messenger/content/mailCommands.js
Line: 189
Also here, it works for mail, but fails for news.
Please let me know how I can help with this bug and find the problem.
pi
| Reporter | ||
Comment 18•22 years ago
|
||
Now I found something really strange! It works for one (and only one) of the two
news server I have set up.
pi
Target Milestone: mozilla1.3final → ---
| Reporter | ||
Comment 19•22 years ago
|
||
Even more testing. For the server with the failure I created another newsserver
account using a different hostname of that machine. I copied the .newsrc, so I
have the same groups. I deleted host-News.CIS.DFN.DE.msf, news.fu-berlin.de.msf,
respectively, they were created identically. I made sure, that prefs.js has the
exact same settings for both (besides the name, of course). Further, the
hostinfo.dat only differs insignificantly:
< newsrcname=News.CIS.DFN.DE
< lastgroupdate=2147483647
< firstnewdate=2147483647
< uniqueid=2147483647
---
> newsrcname=news.fu-berlin.de
> lastgroupdate=0
> firstnewdate=7536746
> uniqueid=0
So everything now is identical besides the groups' .msf files, but this problem
is related to a server, not single groups. I have no clue where else I should
look. Where can it be?
pi
| Reporter | ||
Comment 20•22 years ago
|
||
Now I also made sure the underlying identities are identical in all values.
Still it works for the new copy of the server, not the old one.
pi
| Reporter | ||
Comment 21•22 years ago
|
||
Now I also made the new copy of the non-working server an identical copy, i.e.,
I copied the .newsrc, removed both .msf and replace the complete server
directory with the content of the old (broken) one. The problem still shows up.
That seems to prove that the problem cannot be in the News directory of the
profile directory.
I really need some hint where I could find the problem.
pi
Summary: Forward inline button does not work for news (works for e-mail) → Forward inline button does not work for some (not all) news account
| Reporter | ||
Comment 22•22 years ago
|
||
OK, I found the bug. That SUCKS BIG TIME!
The only thing I had to do to repair the problem, was changing the spelling of
the host name of the news server. The problem showed up with News.CIS.DFN.De. It
went away with news.cis.dfn.de. Since it worked some time ago, someone
introduced the problem with capital letters. That really has to go.
pi
Flags: blocking1.4b?
Flags: blocking1.4?
Updated•22 years ago
|
Flags: blocking1.4b? → blocking1.4b-
| Assignee | ||
Comment 23•22 years ago
|
||
investigating, I think I know the cause.
Target Milestone: --- → mozilla1.4beta
| Assignee | ||
Comment 24•22 years ago
|
||
I have a server named NEWS.
but check this out:
GetUrlForUri() is called with:
"news-message://news/alt.test#946833?fetchCompleteMessage=true"
instead of
"news-message://NEWS/alt.test#946833?fetchCompleteMessage=true"
I'm pretty sure that's the problem.
nsNntpService::CreateMessageIDURL(nsIMsgFolder * 0x04c621ac, unsigned int
946833, char * * 0x03c66018) line 194
nsNntpService::GetUrlForUri(nsNntpService * const 0x039e5e2c, const char *
0x0012b3b0, nsIURI * * 0x0012b394, nsIMsgWindow * 0x00000000) line 489 + 48 bytes
mime_bridge_create_draft_stream(nsIMimeEmitter * 0x00000000, nsStreamConverter *
0x049a4418, nsIURI * 0x04e2dadc, int 6) line 2070 + 71 bytes
bridge_create_stream(nsIMimeEmitter * 0x00000000, nsStreamConverter *
0x049a4418, nsIURI * 0x04e2dadc, int 6, unsigned int 14, nsIChannel *
0x0179e6a8) line 101 + 21 bytes
nsStreamConverter::Init(nsStreamConverter * const 0x049a4418, nsIURI *
0x04e2dadc, nsIStreamListener * 0x00000000, nsIChannel * 0x0179e6a8) line 740 +
37 bytes
nsStreamConverter::AsyncConvertData(nsStreamConverter * const 0x049a4418, const
unsigned short * 0x00000000, const unsigned short * 0x00000000,
nsIStreamListener * 0x00000000, nsISupports * 0x0179e6a8) line 1149 + 34 bytes
nsMsgDraft::ProcessDraftOrTemplateOperation(const char * 0x0012b95c, int 6,
nsIMsgIdentity * 0x039edd00, const char * 0x04ea9888, nsIMsgWindow * 0x03836f70)
line 177 + 47 bytes
nsMsgDraft::OpenDraftMsg(nsMsgDraft * const 0x04e59b50, const char * 0x0012b95c,
const char * 0x04ea9888, nsIMsgIdentity * 0x039edd00, int 1, nsIMsgWindow *
0x03836f70) line 212
nsMsgComposeService::OpenComposeWindow(nsMsgComposeService * const 0x039b8188,
const char * 0x00000000, const char * 0x04ea9888, int 4, int 0, nsIMsgIdentity *
0x039edd00, nsIMsgWindow * 0x03836f70) line 412 + 61 bytes
XPTC_InvokeByIndex(nsISupports * 0x039b8188, unsigned int 3, unsigned int 6,
nsXPTCVariant * 0x0012bb80) line 102
XPCWrappedNative::CallMethod(XPCCallContext & {...}, XPCWrappedNative::CallMode
CALL_METHOD) line 2023 + 42 bytes
XPC_WN_CallMethod(JSContext * 0x00fb8078, JSObject * 0x01715918, unsigned int 6,
long * 0x04c83b60, long * 0x0012be60) line 1284 + 14 bytes
js_Invoke(JSContext * 0x00fb8078, unsigned int 6, unsigned int 0) line 843 + 23
bytes
js_Interpret(JSContext * 0x00fb8078, long * 0x0012cd20) line 2834 + 15 bytes
js_Invoke(JSContext * 0x00fb8078, unsigned int 1, unsigned int 2) line 860 + 13
bytes
nsXPCWrappedJSClass::CallMethod(nsXPCWrappedJSClass * const 0x02f83238,
nsXPCWrappedJS * 0x03b94108, unsigned short 5, const nsXPTMethodInfo *
0x01613be8, nsXPTCMiniVariant * 0x0012d0bc) line 1332 + 22 bytes
nsXPCWrappedJS::CallMethod(nsXPCWrappedJS * const 0x03b94108, unsigned short 5,
const nsXPTMethodInfo * 0x01613be8, nsXPTCMiniVariant * 0x0012d0bc) line 429
PrepareAndDispatch(nsXPTCStubBase * 0x03b94108, unsigned int 5, unsigned int *
0x0012d16c, unsigned int * 0x0012d15c) line 117 + 31 bytes
SharedStub() line 147
XPTC_InvokeByIndex(nsISupports * 0x03b94108, unsigned int 5, unsigned int 1,
nsXPTCVariant * 0x0012d30c) line 102
XPCWrappedNative::CallMethod(XPCCallContext & {...}, XPCWrappedNative::CallMode
CALL_METHOD) line 2023 + 42 bytes
XPC_WN_CallMethod(JSContext * 0x00fb8078, JSObject * 0x016a8cd0, unsigned int 1,
long * 0x04c839d8, long * 0x0012d5ec) line 1284 + 14 bytes
js_Invoke(JSContext * 0x00fb8078, unsigned int 1, unsigned int 0) line 843 + 23
bytes
js_Interpret(JSContext * 0x00fb8078, long * 0x0012e4ac) line 2834 + 15 bytes
js_Invoke(JSContext * 0x00fb8078, unsigned int 1, unsigned int 2) line 860 + 13
bytes
js_InternalInvoke(JSContext * 0x00fb8078, JSObject * 0x017170a0, long 49475240,
unsigned int 0, unsigned int 1, long * 0x0012e708, long * 0x0012e5d8) line 935 +
20 bytes
JS_CallFunctionValue(JSContext * 0x00fb8078, JSObject * 0x017170a0, long
49475240, unsigned int 1, long * 0x0012e708, long * 0x0012e5d8) line 3527 + 31 bytes
nsJSContext::CallEventHandler(nsJSContext * const 0x015c1660, void * 0x017170a0,
void * 0x02f2eea8, unsigned int 1, void * 0x0012e708, int * 0x0012e70c, int 0)
line 1079 + 33 bytes
nsJSEventListener::HandleEvent(nsJSEventListener * const 0x03608120, nsIDOMEvent
* 0x04ed9990) line 181 + 77 bytes
nsEventListenerManager::HandleEventSubType(nsListenerStruct * 0x036081e0,
nsIDOMEvent * 0x04ed9990, nsIDOMEventTarget * 0x04c0c890, unsigned int 8,
unsigned int 7) line 1191 + 20 bytes
nsEventListenerManager::HandleEvent(nsEventListenerManager * const 0x036080b8,
nsIPresContext * 0x02e6bd08, nsEvent * 0x0012f29c, nsIDOMEvent * * 0x0012f164,
nsIDOMEventTarget * 0x04c0c890, unsigned int 7, nsEventStatus * 0x0012f2e8) line
2190 + 36 bytes
nsXULElement::HandleDOMEvent(nsXULElement * const 0x034f6978, nsIPresContext *
0x02e6bd08, nsEvent * 0x0012f29c, nsIDOMEvent * * 0x0012f164, unsigned int 7,
nsEventStatus * 0x0012f2e8) line 3302
PresShell::HandleDOMEventWithTarget(PresShell * const 0x02ec04b0, nsIContent *
0x034f6978, nsEvent * 0x0012f29c, nsEventStatus * 0x0012f2e8) line 6443 + 39 bytes
nsMenuFrame::Execute(nsGUIEvent * 0x0012f78c) line 1720
nsMenuFrame::HandleEvent(nsMenuFrame * const 0x04b6650c, nsIPresContext *
0x02e6bd08, nsGUIEvent * 0x0012f78c, nsEventStatus * 0x0012f57c) line 467
PresShell::HandleEventInternal(nsEvent * 0x0012f78c, nsIView * 0x04992c40,
unsigned int 1, nsEventStatus * 0x0012f57c) line 6411 + 38 bytes
PresShell::HandleEvent(PresShell * const 0x02ec04b4, nsIView * 0x04992c40,
nsGUIEvent * 0x0012f78c, nsEventStatus * 0x0012f57c, int 0, int & 1) line 6297 +
25 bytes
nsViewManager::HandleEvent(nsView * 0x02ebff88, nsGUIEvent * 0x0012f78c, int 0)
line 2292
nsView::HandleEvent(nsViewManager * 0x02ebfd78, nsGUIEvent * 0x0012f78c, int 0)
line 308
nsViewManager::DispatchEvent(nsViewManager * const 0x02ebfd78, nsGUIEvent *
0x0012f78c, nsEventStatus * 0x0012f68c) line 2022 + 23 bytes
HandleEvent(nsGUIEvent * 0x0012f78c) line 82
nsWindow::DispatchEvent(nsWindow * const 0x02ec0024, nsGUIEvent * 0x0012f78c,
nsEventStatus & nsEventStatus_eIgnore) line 1053 + 10 bytes
nsWindow::DispatchWindowEvent(nsGUIEvent * 0x0012f78c) line 1074
nsWindow::DispatchMouseEvent(unsigned int 301, unsigned int 0, nsPoint *
0x00000000) line 5183 + 21 bytes
ChildWindow::DispatchMouseEvent(unsigned int 301, unsigned int 0, nsPoint *
0x00000000) line 5440
nsWindow::ProcessMessage(unsigned int 514, unsigned int 0, long 7668095, long *
0x0012fc34) line 3983 + 28 bytes
nsWindow::WindowProc(HWND__ * 0x00320516, unsigned int 514, unsigned int 0, long
7668095) line 1336 + 27 bytes
USER32! 77e3a244()
USER32! 77e145e5()
USER32! 77e1a792()
nsAppShellService::Run(nsAppShellService * const 0x015a02c0) line 479
main1(int 2, char * * 0x00270070, nsISupports * 0x00f0b148) line 1268 + 32 bytes
main(int 2, char * * 0x00270070) line 1647 + 37 bytes
mainCRTStartup() line 338 + 17 bytes
KERNEL32! 77ea847c()
| Assignee | ||
Comment 25•22 years ago
|
||
work for pop and imap, because we end up using the account manager to find the
right server.
the fix will involve adding something like this
rv = accountManager->FindServer(username,
hostname,
"nntp",
getter_AddRefs(server));
big thanks to boris 'pi' Piwinger for tracking this down.
hope to land a fix in 1.4 beta.
| Assignee | ||
Comment 26•22 years ago
|
||
yes, nsNntpService::GetFolderFromUri() needs to be improved.
working on it.
| Assignee | ||
Comment 27•22 years ago
|
||
Comment 28•22 years ago
|
||
Comment on attachment 122667 [details] [diff] [review]
patch
sr=bienvenu, looks good.
Attachment #122667 -
Flags: superreview+
| Assignee | ||
Comment 29•22 years ago
|
||
fix comment and whitespace.
Attachment #122667 -
Attachment is obsolete: true
| Assignee | ||
Updated•22 years ago
|
Summary: Forward inline button does not work for some (not all) news account → Forward inline button does not work for news accounts with capital letters in the hostname
Comment 30•22 years ago
|
||
Comment on attachment 122670 [details] [diff] [review]
diff.txt
sr=bienvenu
Attachment #122670 -
Flags: superreview+
| Assignee | ||
Comment 31•22 years ago
|
||
while testing news://host/message-id and nttp://host/message-id, I found a
problem.
here's a new patch.
Attachment #122670 -
Attachment is obsolete: true
Comment 32•22 years ago
|
||
Comment on attachment 122673 [details] [diff] [review]
one more patch
sr=bienvenu, over AIM, Seth is going to remove the NS_ENSURE_SUCCESS(rv, rv)
return NS_OK pattern
Attachment #122673 -
Flags: superreview+
| Assignee | ||
Comment 33•22 years ago
|
||
Comment on attachment 122673 [details] [diff] [review]
one more patch
r/sr=bienvenu,a=sspitzer
checking with asa, if I should land today or not.
Attachment #122673 -
Flags: review+
Attachment #122673 -
Flags: approval1.4b+
| Assignee | ||
Comment 34•22 years ago
|
||
will land first thing in 1.4 final
Flags: blocking1.4?
Summary: Forward inline button does not work for news accounts with capital letters in the hostname → [news] Forward inline button does not work for news accounts with capital letters in the hostname
Updated•22 years ago
|
Attachment #122673 -
Flags: approval1.4b+ → approval1.4+
| Assignee | ||
Comment 35•22 years ago
|
||
fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago → 22 years ago
Keywords: nsbeta1
Resolution: --- → FIXED
Target Milestone: mozilla1.4beta → mozilla1.4final
| Assignee | ||
Comment 36•22 years ago
|
||
I've asked boris to verify, to offload esther / nbaca.
QA Contact: esther → bugzilla
| Reporter | ||
Comment 37•22 years ago
|
||
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4b) Gecko/20030514
(built from source of 05/13/03 15:26:00 with patch 101274)
Patch works. Thanks for the fast fix after Problem was found, Seth.
pi
Status: RESOLVED → VERIFIED
Comment 38•22 years ago
|
||
Could Bug 210089 be caused by this checkin?
Comment 39•22 years ago
|
||
> Could Bug 210089 be caused by this checkin?
I would say so. Also reported as bug 210887 and bug 210547.
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•