bug #153052 foward inline of news message doesn't work if hostname has any capital letters. thanks to Boris 'pi' Piwinger for tracking this down. r/sr=bienvenu, a=sspitzer